# imgfxdx

./: Cargo.toml  Dioxus.toml  input.css  package-lock.json  vercel.json
assets/: tailwind.css
assets/styling/: main.css
src/: main.rs
src/backend/: effect.rs  imgfx.rs  load.rs  mod.rs
src/components/: color_picker.rs  effect_item.rs  list.rs  mod.rs  nav.rs  upload.rs
src/routes/: home.rs  mod.rs
src/utils/: image_utils.rs  mod.rs
